ちょっとしたバグのような何かを修正

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -4,7 +4,7 @@ html,body,ul,li, h1, h2
 
 body
 	background : #ffffff
-	font-family : "serif"
+	font-family : serif
 
 ul
 	list-style-position: inside
@@ -64,6 +64,9 @@ body > footer
 	border-radius : 5px
 	box-shadow : 0 5px 20px 10px rgba(120, 120, 120, 0.1)
 
+.sukesuke
+	opacity : 0
+
 
 .imgContainer
 	float : left
@@ -117,5 +120,5 @@ body > footer
 		opacity : 0.0
 		-webkit-filter: blur(6px)
 	100%
-		opacity : 1.0
+		opacity : 0.999
 		-webkit-filter: blur(0px)
